1. added geo search

--- a/src/HOAHome/HOAHome/TODO.txt
+++ b/src/HOAHome/HOAHome/TODO.txt
@@ -2,4 +2,4 @@
 
 Search by Name or by address.  Name search be a contains search. address search will find nieghborhods with in a couple of miles.
 
-working: Got search by name services working. Need to finish display results and search by address
+working: finish backend data and geo search. need to work on map view
