Finished a lot of the content management services

--- a/src/HOAHome/HOAHome/TODO.txt
+++ b/src/HOAHome/HOAHome/TODO.txt
@@ -4,4 +4,6 @@ Search by Name or by address.  Name search be a contains search. address search 
 
 working: finish backend data and geo search. need to work on map view. Or perhaps don't need map on this page?
 
-2. After searching and clicking on a neighborhood, need to switch to neighborhood context somehow.
+2. After searching and clicking on a neighborhood, need to switch to neighborhood context somehow. Done with new route
+
+3. Figure out how content management is going to work
