--- a/src/HOAHome/HOAHome/TODO.txt
+++ b/src/HOAHome/HOAHome/TODO.txt
@@ -12,3 +12,5 @@ pretty well except links to other stuff such as user settings does not switch ur
 4. Security has pretty much been implement. Need to finish Principle class
 
 5. Add ability to associate homes with neighborhood.
+
+6. Change configration to parse real connection string
